# FileTrain

./: .gitignore  README.md
Documentation/: file_train_project_plan.odt
FileTrainClient/: Cargo.toml  prog-info.json
FileTrainClient/src/: client.rs  main.rs
FileTrainGUI/src-tauri/: Cargo.toml  tauri.conf.json
FileTrainGUI/ui/: index.html
FileTrainGUI/ui/css/: main-styles.css
FileTrainGUI/ui/js/: client.js  main.js  server.js
FileTrainServer/: Cargo.toml  prog-info.json
FileTrainServer/src/: cli_arguments.rs  data_models.rs  main.rs  server.rs
client/: Cargo.toml  test.txt
client/src/: main.rs
file_train/: Cargo.toml  output.txt  test.txt
file_train/src/: client.rs  main.rs  server.rs
server/: Cargo.toml  output.txt  recieved.txt
server/src/: main.rs
