[package]
name = "filetrain_client"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
pwhash = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
chacha20poly1305 = "0.10.1"
