[package]
name = "filetrain_server"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
pwhash = "0.3.1"
toml = "0.8.14"
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10.1"
cliparser = "0.1.2"
serde_json = "1.0.120"

